--- a/Dourouss/Base.lproj/Main.storyboard
+++ b/Dourouss/Base.lproj/Main.storyboard
@@ -71,6 +71,60 @@
             </objects>
             <point key="canvasLocation" x="-15" y="1520"/>
         </scene>
+        <!--Collection View Controller-->
+        <scene sceneID="LnT-CX-rIr">
+            <objects>
+                <collectionViewController id="e44-IK-pcA" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="ruY-db-OBr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vVN-Hf-1Au">
+                            <size key="itemSize" width="100" height="120"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="Rkp-JO-E39" customClass="CollectionViewCell" customModule="Dourouss" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="100" height="120"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dcz-1x-dIC">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="104"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8W-zz-Gi3">
+                                            <rect key="frame" x="0.0" y="102" width="100" height="18"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="r8W-zz-Gi3" secondAttribute="bottom" id="IXv-dv-suk"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="khassidaImage" destination="dcz-1x-dIC" id="knS-IR-tbW"/>
+                                    <outlet property="khassidaLabel" destination="r8W-zz-Gi3" id="ady-wt-olI"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="e44-IK-pcA" id="Caw-g4-RxD"/>
+                            <outlet property="delegate" destination="e44-IK-pcA" id="8PN-3V-pTb"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="SfN-lx-Yv0"/>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gnh-In-YtY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="722.39999999999998" y="1522.488755622189"/>
+        </scene>
         <!--Options-->
         <scene sceneID="NCo-4m-7g2">
             <objects>
@@ -90,35 +144,6 @@
             </objects>
             <point key="canvasLocation" x="-15" y="699"/>
         </scene>
-        <!--Root View Controller-->
-        <scene sceneID="Uxp-E9-gNQ">
-            <objects>
-                <tableViewController id="V7Q-OS-qgZ" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="4N3-LF-oSQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="jmK-a7-4XG">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jmK-a7-4XG" id="EUO-6a-0SI">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="V7Q-OS-qgZ" id="g8w-4d-Xap"/>
-                            <outlet property="delegate" destination="V7Q-OS-qgZ" id="iVj-eQ-Wn3"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="BaW-Gj-RxQ"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eP6-kH-rIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="721" y="1520"/>
-        </scene>
         <!--Bibliothèque-->
         <scene sceneID="fuG-hR-qLY">
             <objects>
@@ -131,7 +156,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="V7Q-OS-qgZ" kind="relationship" relationship="rootViewController" id="7cu-9T-hIV"/>
+                        <segue destination="e44-IK-pcA" kind="relationship" relationship="rootViewController" id="wke-S9-KFi"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="exB-Xr-AI2" userLabel="First Responder" sceneMemberID="firstResponder"/>
